--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,5 +6,5 @@
 	Music suggestions based on your taste  
 </p>
 
-<%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary"%>
+<%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-large btn-primary"%>
 </div>
