added buttons to home page / css edits to buttons and background color of site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,46 @@
 			<%= yield %>
 			<%= render 'layouts/footer' %>
 			<%=debug(params) if Rails.env.development?%>
-		</div> 
+			
+			<div id="iWantTo"> 
+				
+				<div class="row">
+					<div id="wakeUp" class="action span4">
+						<span class="hash">#WakeUp</span>
+						<span class="icon"></span>
+						<span class="highlight"></span>
+					</div>
+					<div id="doWork" class="action span4">
+						<span class="hash">#DoWork</span>
+						<span class="icon"></span>
+						<span class="highlight"></span>
+					</div>
+					<div id="getBig" class="action span4">
+						<span class="hash">#GetBig</span>
+						<span class="icon"></span>
+						<span class="highlight"></span>
+					</div>
+				</div><!--.row-->
+				
+				<div class="row">
+					<div id="getDrunk" class="action span4">
+						<span class="hash">#GetDrunk</span>
+						<span class="icon"></span>
+						<span class="highlight"></span>
+					</div>
+					<div id="hookUp" class="action span4">
+						<span class="hash">#HookUp</span>
+						<span class="icon"></span>
+						<span class="highlight"></span>
+					</div>
+					<div id="passOut" class="action span4">
+						<span class="hash">#PassOut</span>
+						<span class="icon"></span>
+						<span class="highlight"></span>
+					</div>
+				</div><!--.row-->
+					
+			</div> <!-- #iWantTo -->
+		</div>
 	</body>
 </html>
