--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,7 @@ html {
 }
 body {
   padding-top: 60px;
+  background: #3d3d3d;
 }
 section {
   overflow: auto;
@@ -104,3 +105,160 @@ float: left;
 	@include box_sizing;
 }
 
+/* #iWantTo */
+#iWantTo {
+	font-family: helvetica, sans-serif;
+	font-size: 200%;
+	font-style: italic;
+	text-align: center;
+	div.action {
+		position: relative;
+		height: 300px;
+		box-shadow: 0 1px 1px #000;
+		margin-bottom: 20px;
+		-moz-border-radius: 4px;
+		-webkit-border-radius: 4px;
+		border-radius: 4px;
+		cursor: pointer;
+		span.hash {
+			position: relative;
+			top: 240px;
+		}
+		span.highlight {
+			position: absolute; 
+			width: 100%;
+			height: 100%;
+			background: #fff;
+			left: 0;
+			opacity: 0;
+		}
+	}
+	#wakeUp {
+		background: #e29292; /* Old browsers */
+		background: -moz-linear-gradient(top,  #e29292 0%, #db7777 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e29292), color-stop(100%,#db7777)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #e29292 0%,#db7777 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #e29292 0%,#db7777 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #e29292 0%,#db7777 100%); /* IE10+ */
+		background: linear-gradient(top,  #e29292 0%,#db7777 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e29292', endColorstr='#db7777',GradientType=0 ); /* IE6-9 */
+		color: #f7e2e2;
+		text-shadow: 0 1px 0 #5e3434;
+		.icon {
+			width: 138px;
+			height: 134px;
+			background: url(/images/button_icons.png) 0 0;
+			position: absolute;
+			left: 50%;
+			margin-left: -80px;
+			top: 60px;	
+		}
+	}
+	#doWork {
+		background: #e7a983; /* Old browsers */
+		background: -moz-linear-gradient(top,  #e7a983 0%, #e19364 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e7a983), color-stop(100%,#e19364)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #e7a983 0%,#e19364 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #e7a983 0%,#e19364 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #e7a983 0%,#e19364 100%); /* IE10+ */
+		background: linear-gradient(top,  #e7a983 0%,#e19364 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e7a983', endColorstr='#e19364',GradientType=0 ); /* IE6-9 */
+		color: #f8e7df;
+		text-shadow: 0 1px 0 #613f2c;
+		.icon {
+			width: 144px;
+			height: 134px;
+			background: url(/images/button_icons.png) -138px 0;
+			position: absolute;
+			top: 60px;
+			left: 50%;
+			margin-left: -72px;
+		}
+	}
+	#getBig {
+		background: #e5c684; /* Old browsers */
+		background: -moz-linear-gradient(top,  #e5c684 0%, #dfb865 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e5c684), color-stop(100%,#dfb865)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #e5c684 0%,#dfb865 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #e5c684 0%,#dfb865 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #e5c684 0%,#dfb865 100%); /* IE10+ */
+		background: linear-gradient(top,  #e5c684 0%,#dfb865 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5c684', endColorstr='#dfb865',GradientType=0 ); /* IE6-9 */
+		color: #f1e8d7;
+		text-shadow: 0 1px 0 #5e4e2b;
+		.icon {
+			width: 145px;
+			height: 142px;
+			background: url(/images/button_icons.png) -282px 0;
+			position: absolute;
+			top: 52px;
+			left: 50%;
+			margin-left: -65px;
+		}
+	}
+	#getDrunk {
+		background: #b1c95a; /* Old browsers */
+		background: -moz-linear-gradient(top,  #b1c95a 0%, #b1c95a 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b1c95a), color-stop(100%,#b1c95a)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #b1c95a 0%,#b1c95a 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #b1c95a 0%,#b1c95a 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #b1c95a 0%,#b1c95a 100%); /* IE10+ */
+		background: linear-gradient(top,  #b1c95a 0%,#b1c95a 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b1c95a', endColorstr='#b1c95a',GradientType=0 ); /* IE6-9 */
+		color: #edf2dd;
+		text-shadow: 0 1px 0 #4a5426;
+		.icon {
+			width: 106px;
+			height: 134px;
+			background: url(/images/button_icons.png) -427px 0;
+			position: absolute;
+			top: 60px;
+			left: 50%;
+			margin-left: -60px;
+		}
+	}
+	#hookUp {
+		background: #93d676; /* Old browsers */
+		background: -moz-linear-gradient(top,  #93d676 0%, #86d166 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#93d676), color-stop(100%,#86d166)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #93d676 0%,#86d166 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #93d676 0%,#86d166 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #93d676 0%,#86d166 100%); /* IE10+ */
+		background: linear-gradient(top,  #93d676 0%,#86d166 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93d676', endColorstr='#86d166',GradientType=0 ); /* IE6-9 */
+		color: #e5f4df;
+		text-shadow: 0 1px 0 #38572a;
+		.icon {
+			width: 185px;
+			height: 127px;
+			background: url(/images/button_icons.png) -533px 0;
+			position: absolute;
+			top: 60px;
+			left: 50%;
+			margin-left: -93px;
+		}
+
+	}
+	#passOut {
+		background: #89e0be; /* Old browsers */
+		background: -moz-linear-gradient(top,  #89e0be 0%, #77dbb4 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#89e0be), color-stop(100%,#77dbb4)); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  #89e0be 0%,#77dbb4 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  #89e0be 0%,#77dbb4 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  #89e0be 0%,#77dbb4 100%); /* IE10+ */
+		background: linear-gradient(top,  #89e0be 0%,#77dbb4 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#89e0be', endColorstr='#77dbb4',GradientType=0 ); /* IE6-9 */
+		color: #e2f6ee;
+		text-shadow: 0 1px 0 #335e4d;
+		.icon {
+			width: 145px;
+			height: 127px;
+			background: url(/images/button_icons.png) -718px 0;
+			position: absolute;
+			top: 70px;
+			left: 50%;
+			margin-left: -72px;
+		}
+	}
+}
+/* end #iWantTo */
