--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,21 +53,22 @@ p{
 font-size: 1.1em; line-height: 1.7em;
 }
 /* header */
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  line-height: 1;
-  &:hover {
-    color: white;
-    text-decoration: none;
-  }
+.navbar-inner {
+	height: 60px !important;
+	background: #222222;
+	border-bottom: 1px solid #141414;
 }
+#logo {
+  	float: left;
+  	font-family: helvetica, sans-serif;
+  	color: #fff;
+  	text-shadow: 0 1px 1px #000;
+  	display: block;
+  	margin-top: 20px;
+  	margin-right: 10px;
+	font-size: 200%;
+	font-weight: bold;
+	}
 
 /* footer */
 
@@ -105,6 +106,33 @@ float: left;
 	@include box_sizing;
 }
 
+#getStarted, #tweetThis, #listenToPlaylist {
+	font-family: helvetica, sans-serif;
+	margin: 30px 0;
+	h2 {
+		font-size: 250%;
+		text-shadow: 0 1px 0 #000;
+		color: #eeeeee;
+		margin: 0;
+		}
+	p {
+		margin: 0;
+		text-align: center;
+		font-size: 120%;
+		color: #8c8c8c;
+		text-shadow: 0 1px 0 #000;
+		span.twitter_icon {
+			width: 16px;
+			height: 15px;
+			display: inline-block;
+			background: url(/images/twitter_logo.png);
+			top: 3px;
+			margin-left: 1px;
+			position: relative;
+			}
+		}
+	}
+	
 /* #iWantTo */
 #iWantTo {
 	font-family: helvetica, sans-serif;
@@ -131,6 +159,7 @@ float: left;
 			background: #fff;
 			left: 0;
 			opacity: 0;
+			z-index: 100;
 		}
 	}
 	#wakeUp {
@@ -152,6 +181,7 @@ float: left;
 			left: 50%;
 			margin-left: -80px;
 			top: 60px;	
+			z-index: 200;
 		}
 	}
 	#doWork {
@@ -173,6 +203,7 @@ float: left;
 			top: 60px;
 			left: 50%;
 			margin-left: -72px;
+			z-index: 200;
 		}
 	}
 	#getBig {
@@ -194,6 +225,7 @@ float: left;
 			top: 52px;
 			left: 50%;
 			margin-left: -65px;
+			z-index: 200;
 		}
 	}
 	#getDrunk {
@@ -215,6 +247,7 @@ float: left;
 			top: 60px;
 			left: 50%;
 			margin-left: -60px;
+			z-index: 200;
 		}
 	}
 	#hookUp {
@@ -236,6 +269,7 @@ float: left;
 			top: 60px;
 			left: 50%;
 			margin-left: -93px;
+			z-index: 200;
 		}
 
 	}
@@ -258,7 +292,86 @@ float: left;
 			top: 70px;
 			left: 50%;
 			margin-left: -72px;
+			z-index: 200;
 		}
 	}
 }
 /* end #iWantTo */
+
+/* #tweetThis */
+	#tweetThis {
+		#tweetThisForm {
+			margin-top: 20px;
+			form {
+					textarea {
+						background: #2b2b2b;
+						border: none;
+						border-bottom: 1px solid #4d4d4d;
+						border-top: 1px solid #1c1c1c;
+						width: 520px;
+						padding: 50px 50px 0 50px;
+						height: 120px;
+						color: #e5e5e5;
+						text-shadow: 0 1px 0 #000;
+						font-size: 140%;
+						line-height: 130%;
+						font-family: helvetica, sans-serif;
+						font-style: italic;
+						margin-bottom: 15px;
+						-moz-border-radius: 4px;
+						-webkit-border-radius: 4px;
+						border-radius: 4px;
+						}
+					input.submit {
+						width: 620px;
+						height: 80px;
+						font-size: 170%;
+						text-shadow: 0 1px 0 #a5d9ef;
+						font-weight: bold;
+						color: #356073;
+						line-height: 40px;
+						-moz-border-radius: 4px;
+						-webkit-border-radius: 4px;
+						border-radius: 4px;
+						border: none;
+						border-top: 1px solid #a5d9ef;
+						box-shadow: 0 1px 1px #000;
+						padding: 0 40px;
+						background: #7ec9e8; /* Old browsers */
+						background: -moz-linear-gradient(top,  #7ec9e8 0%, #57b8e1 100%); /* FF3.6+ */
+						background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7ec9e8), color-stop(100%,#57b8e1)); /* Chrome,Safari4+ */
+						background: -webkit-linear-gradient(top,  #7ec9e8 0%,#57b8e1 100%); /* Chrome10+,Safari5.1+ */
+						background: -o-linear-gradient(top,  #7ec9e8 0%,#57b8e1 100%); /* Opera 11.10+ */
+						background: -ms-linear-gradient(top,  #7ec9e8 0%,#57b8e1 100%); /* IE10+ */
+						background: linear-gradient(top,  #7ec9e8 0%,#57b8e1 100%); /* W3C */
+						filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7ec9e8', endColorstr='#57b8e1',GradientType=0 ); /* IE6-9 */
+						}
+					input.submit:hover {
+						border-top: 1px solid #aae3fb;
+						background: #8fd0eb; /* Old browsers */
+						background: -moz-linear-gradient(top,  #8fd0eb 0%, #74cbf0 100%); /* FF3.6+ */
+						background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8fd0eb), color-stop(100%,#74cbf0)); /* Chrome,Safari4+ */
+						background: -webkit-linear-gradient(top,  #8fd0eb 0%,#74cbf0 100%); /* Chrome10+,Safari5.1+ */
+						background: -o-linear-gradient(top,  #8fd0eb 0%,#74cbf0 100%); /* Opera 11.10+ */
+						background: -ms-linear-gradient(top,  #8fd0eb 0%,#74cbf0 100%); /* IE10+ */
+						background: linear-gradient(top,  #8fd0eb 0%,#74cbf0 100%); /* W3C */
+						filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8fd0eb', endColorstr='#74cbf0',GradientType=0 ); /* IE6-9 */
+						}
+				}
+			}
+	}
+/* end #tweetThis */
+
+/* #musicPlayer */
+#musicPlayer {
+	#playerBackground {
+		padding: 25px;
+		background: #252525;
+		border-bottom: 1px solid #4d4d4d;
+		border-top: 1px solid #1c1c1c;
+		-moz-border-radius: 4px;
+		-webkit-border-radius: 4px;
+		border-radius: 4px;
+		}
+	}
+/* end #musicPlayer */
