--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-		<%= link_to "Autotune", root_path, id: "logo" %>
+			<div id="logo">#AutoTune</div>
 			<nav>
 			<ul class="nav pull-right">
 				<li><%= link_to "Home", root_path%></li>
