--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,23 +6,10 @@
 			<ul class="nav pull-right">
 				<li><%= link_to "Home", root_path%></li>
 				<li><%= link_to "About", about_path %></li>
-				<% if signed_in?%>
-					<li><%= link_to "Users", '#' %></li>
-					<li id="fat-menu" class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							Account <b class="caret"></b>
-						</a>
-							<ul class="dropdown-menu">
-								<li><%= link_to "Profile", '#'%></li>
-								<li><%= link_to "Settings", edit_user_registration_path %></li>
-								<li class="divider"></li>
-								<li>
-								<%=link_to "Sign out", destroy_user_session_path %>
-								</li>
-							</ul>
-						</li>
+				<% if authenticated? %>
+					<li><%= link_to "@#{session[:twitter_name]}", signout_path %></li>
 				<% else%>	
-				<li><%= link_to "Sign in", new_user_session_path %></li>
+				<li><%= link_to "Sign in", twitter_signin_path %></li>
 				<% end%>
 			</ul>
 			</nav>
