--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Home') %> <h1</h1>
+<% provide(:title, 'Home') %> <h1></h1>
 <div class="center hero-unit">
 <h1>Welcome to Autotune</h1>
 <p>
@@ -6,5 +6,5 @@
 	Music suggestions based on your taste  
 </p>
 
-<%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-large btn-primary"%>
+<%= link_to "Sign up now!", twitter_signin_path, class: "btn btn-large btn-primary"%>
 </div>
