final checkin for design / header

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,6 +57,9 @@ font-size: 1.1em; line-height: 1.7em;
 	height: 50px !important;
 	background: #222222;
 	border-bottom: 1px solid #141414;
+	li {
+		margin-top: 5px;
+		}
 }
 #logo {
   	float: left;
