--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,6 +71,13 @@ font-size: 1.1em; line-height: 1.7em;
   	margin-right: 10px;
 	font-size: 170%;
 	font-weight: bold;
+	a {
+		color: #f3f3f3;
+		text-decoration: none;
+		}
+	a:hover {
+		color: #fff;
+		}
 	}
 
 /* footer */
@@ -405,6 +412,10 @@ float: left;
 			position: absolute;
 			top: 20px;
 			right: 20px;
+			background: #e5e5e5 url(/images/next_arrow.png) 50% 50% no-repeat;
+			}
+		#next:hover {
+			background-color: #fff;
 			}
 		}
 	}
