amazing desgin work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,17 +23,17 @@
 				</div>
 			
 				<div class="row">
-					<div id="wakeUp" class="action span4">
+					<div id="WakeUp" class="action span4">
 						<span class="hash">#WakeUp</span>
 						<span class="icon"></span>
 						<span class="highlight"></span>
 					</div>
-					<div id="doWork" class="action span4">
+					<div id="DoWork" class="action span4">
 						<span class="hash">#DoWork</span>
 						<span class="icon"></span>
 						<span class="highlight"></span>
 					</div>
-					<div id="getBig" class="action span4">
+					<div id="GetBig" class="action span4">
 						<span class="hash">#GetBig</span>
 						<span class="icon"></span>
 						<span class="highlight"></span>
@@ -41,17 +41,17 @@
 				</div><!--.row-->
 				
 				<div class="row">
-					<div id="getDrunk" class="action span4">
+					<div id="GetDrunk" class="action span4">
 						<span class="hash">#GetDrunk</span>
 						<span class="icon"></span>
 						<span class="highlight"></span>
 					</div>
-					<div id="hookUp" class="action span4">
+					<div id="HookUp" class="action span4">
 						<span class="hash">#HookUp</span>
 						<span class="icon"></span>
 						<span class="highlight"></span>
 					</div>
-					<div id="passOut" class="action span4">
+					<div id="PassOut" class="action span4">
 						<span class="hash">#PassOut</span>
 						<span class="icon"></span>
 						<span class="highlight"></span>
