--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<div id="logo"><a href="/">#AutoTune</a></div>
+			<div id="logo"><a href="/">#AutoTuneApp</a></div>
 			<nav>
 			<ul class="nav pull-right">
 				<% if authenticated? %>
