--- a/app/views/static_pages/musicplayer.html.erb
+++ b/app/views/static_pages/musicplayer.html.erb
@@ -1,7 +1,8 @@
 			<div id="musicPlayer">
 				<div id="listenToPlaylist" class="span12">
 					<h2>This is your #AutoTuneApp Playlist</h2>
-					<p>Your friends' suggestions will be added in realtime</p>
+                    <h3>This track's tweet:</h3>
+					<p><%= @tweet.text %></p>
 				</div>
 				
 				<div id="playerBackground">
