--- a/app/views/tunes/player.html.erb
+++ b/app/views/tunes/player.html.erb
@@ -17,7 +17,8 @@
 <div id="musicPlayer">
   <div id="listenToPlaylist" class="span12">
     <h2>This is your #AutoTuneApp Playlist</h2>
-    <p>Your friends' suggestions will be added in realtime</p>
+    <h2 style="font-size:18px;margin-top:5px;">This track's tweet:</h2>
+    <p><%= @tweet.text %></p>
   </div>
 
   <div id="playerBackground">
