--- a/app/views/tunes/player.html.erb
+++ b/app/views/tunes/player.html.erb
@@ -17,6 +17,8 @@
 <div id="musicPlayer">
   <div id="listenToPlaylist" class="span12">
     <h2>This is your #AutoTuneApp Playlist</h2>
+	  <h2 style="font-size:18px;margin-top:5px;">This track's tweet:</h2>
+	<p><%= @tweet.text %></p>
   </div>
 
   <div id="playerBackground">
