--- a/app/views/tunes/player.html.erb
+++ b/app/views/tunes/player.html.erb
@@ -8,7 +8,7 @@
       })
 
       setTimeout(function(){
-         $("<iframe></iframe>").attr('src', '<%= @embed_url %>').appendTo("#rdio_container");
+         $("<iframe>w</iframe>").attr('src', '<%= @embed_url %>').appendTo("#rdio_container");
         //$('#rdio_frame').attr('src', '<%= @embed_url %>');
       }, 1000);
   })
